// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render react react: ClickHere 1`] = `
<div>
  Привет 
  Рубаха
  , нажми 
  <a
    href="#"
  >
    здесь
  </a>
   чтобы продолжить.
</div>
`;

exports[`render react react: Hello 1`] = `
<div
  className="host"
>
  Привет Рубаха-кун!1
</div>
`;

exports[`render react react: Static 1`] = `
<div
  className="host"
>
  Вова, купи "гречу"!
</div>
`;

exports[`render react-composite react-composite: DeepHello (invert) 1`] = `
<div>
  No or 
  <div
    className="host"
  >
    i18n, HI!
  </div>
  !
</div>
`;

exports[`render react-composite react-composite: DeepHello 1`] = `
<div>
  <div
    className="host"
  >
    Hi, i18n-kun!
  </div>
   or No!
</div>
`;

exports[`render react-composite react-composite: Dialog 1`] = `
<div
  className="host"
>
  <h1>
    Alert
  </h1>
  <form>
    <h2>
      Бла-бла-бла
    </h2>
    <fieldset>
      <div
        className="row"
      >
        <div
          className="col"
        >
          Width:
        </div>
        <div
          className="col"
        >
          123px
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <input
            type="checked"
          />
           — yes
        </div>
      </div>
    </fieldset>
    <div>
      <div
        title="Footer"
      >
        <button
          name="submit"
          value="OK"
        />
        <button
          value="Cancel"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`transform react 1`] = `
"import __ from \\"tx-i18n\\";
import * as React from 'react';
export const Static = () => (<div className={'host'}>{__(\\"Вова, купи \\\\\\"гречу\\\\\\"!\\")}</div>);
export const Hello = ({ username }) => (<div className={\`host\`}>{__(\\"Привет <#1>-кун!1\\", [username])}</div>);
export const ClickHere = ({ username }) => (__.jsx(\\"Привет <#1>, нажми <2>здесь</2> чтобы продолжить.\\", [{ type: \\"div\\", props: null }, username, { type: \\"a\\", props: { href: \\"#\\" } }]));
export const Input = ({ hint, mode }) => (<div className={\`input \${mode}\`}>
		<input placeholder={__(\\"Подсказка: <#0>\\", [hint])}/>
		<button value={__(\\"Войти\\")}/>
	</div>);
export const InputWithText = ({ hint, mode }) => (__.jsx(\\"Представьтесь:<1/><2/>\\", [{ type: \\"div\\", props: { className: \`input \${mode}\` } }, { type: \\"input\\", props: { placeholder: __(\\"Подсказка: <#0>\\", [hint]) } }, { type: \\"button\\", props: { value: __(\\"Войти\\") } }]));
"
`;

exports[`transform react-composite 1`] = `
"import __ from \\"tx-i18n\\";
import * as React from 'react';
import { Hello } from './react';
export const DeepHello = (props) => {
    return __.jsx(\\"<1/> или Нет!\\", [{ type: \\"div\\", props: null }, { type: Hello, props: { ...props } }]);
};
export const Button = ({ name, text }) => {
    return <button name={name} value={text}/>;
};
export const Form = (props) => {
    return (<form>
			{props.children}
			<div>
				{props.controls}
			</div>
		</form>);
};
export const Dialog = (props) => (<div className=\\"host\\">
		<h1>{__(\\"Alert\\")}</h1>
		<Form controls={<div title={__(\\"Подвал\\")}>
				<Button name={__(\\"submit\\")} text={__(\\"Хорошо\\")}/>
				<button value={__(\\"Отмена\\")}/>
			</div>}>
			<h2>{__(\\"Бла-бла-бла\\")}</h2>
			<fieldset>
				<div className=\\"row\\">
					<div className=\\"col\\">{__(\\"Ширина:\\")}</div>
					<div className=\\"col\\">123px</div>
				</div>
				<div className=\\"row\\">
					{__.jsx(\\"Да<#1><2/>\\", [{ type: \\"div\\", props: { className: \\"col\\" } }, ' ', { type: \\"input\\", props: { type: \\"checked\\" } }])}
				</div>
			</fieldset>
		</Form>
	</div>);
"
`;
